[package]
name = "num-primitive"
version = "0.1.0"
description = "Traits for primitive numeric types"
repository = "https://github.com/rust-num/num-primitive"
license = "MIT OR Apache-2.0"
keywords = ["generic", "mathematics", "numerics", "primitive"]
categories = ["algorithms", "science", "no-std"]
edition = "2024"
rust-version = "1.85"

[features]
default = ["std"]
std = []

[lints.rust]
private-bounds = "deny"
private-interfaces = "deny"
unconditional-recursion = "deny"
unnameable-types = "deny"
unreachable-pub = "deny"

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
