[package]
name = "num-primitive"
version = "0.2.2"
description = "Traits for primitive numeric types"
repository = "https://github.com/rust-num/num-primitive"
license = "MIT OR Apache-2.0"
keywords = ["generic", "mathematics", "numerics", "primitive"]
categories = ["algorithms", "science", "no-std"]
edition = "2024"
rust-version = "1.87"

[features]
default = ["std"]
std = []

[lints.rust]
missing-docs = "deny"
private-bounds = "deny"
private-interfaces = "deny"
unconditional-recursion = "deny"
unnameable-types = "deny"
unreachable-pub = "deny"

[lints.rustdoc]
broken-intra-doc-links = "deny"
private-intra-doc-links = "deny"

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
